dataset1235/2025-2/1153765216/users/230013788/executions/2052804200_359761547.log
== SUBMISSION (2025-09-03 16:32:16)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade >= 2:
  print("paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Digite a sua idade: paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Digite a sua idade: nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Digite a sua idade: nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Digite a sua idade: paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Digite a sua idade: paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Digite a sua idade: paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 16:32:05)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade >= 2:
  print(:"paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 16:32:04)
-- CODE: 
idade = int(input("Digite a sua idade: "))
if idade >= 2:
  print(:"paga")
else:
  print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 3
    print(:"paga")
          ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
